<resources>

    <string name="app_name">BluetoothCommunicationClient</string>

    <string name="connect">Connect</string>

    <string name="disconnect">DIsconnect</string>

    <string name="forward">Forward</string>

    <string name="flt">Float</string>

    <string name="stop">Stop</string>

    <string name="backward">Backward</string>

    <string name="report">Report</string>

    <string name="msg_bluetooth_not_supported">此设备不支持蓝牙！</string>
    <string name="msg_bluetooth_is_necessary">此应用需要蓝牙。\n蓝牙未开启，程序退出。</string>
</resources>
